--- a/assets/default/css/common.css
+++ b/assets/default/css/common.css
@@ -38,10 +38,10 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .hidden{visibility:hidden;}
 .fl{ float:left;}
 .fr{ float:right;}
-.con{ width:950px; margin:0 auto;}
-.head1{ height:74px;}
+.con{ width:100%; margin:0 auto;}
+.head1{ height:74px;width: 950px;margin: 0 auto;}
 .logo{ float:left; margin:23px 0 0 0;}
-.nav{ float:right; padding-top:30px;}
+.nav{ float:left; padding-top:30px;}
 .nav a{ font-size:20px; font-weight:bold; margin-left:20px; float: left; width:45px; height: 24px; background: transparent url(../../images/nav.png) no-repeat 100% 100%; overflow: hidden; clear: none;}
 
 .nav a.shouye{background-position: -5px 0;}
@@ -52,14 +52,15 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .nav a.taoke{background-position: -343px 0;}
 
 .nav a:hover{ font-size:20px; font-weight:bold; margin-left:20px;}
-.top{ height:134px; clear:both; overflow:hidden; height:134px;}
-.top1{ float:left; width:580px; height:100%; background:#e9eef2;}
-.top2{ float:right; width:367px; height:100%; background:#e9eef2;}
+.top{ height:134px; clear:both; overflow:hidden; height:134px;background: none repeat scroll 0 0 #F3F3F3;padding: 20px 0;}
+.topInner{width: 950px;margin: 0 auto;}
+.top1{ float:left; width:580px; height:100%;margin-top: 50px;}
+.top2{ float:right; width:367px; height:100%;}
 .top11{ float:left; font-size:21px; color:#666666; padding:55px 67px 0 50px; font-family:"YaHei";}
-.top12{ float:left; width:400px;}
-.top121{ font-size:14px; color:#666666; padding:28px 0 12px 0;}
+.top12{ float:left;}
+.top121{ font-size:20px; color:#666666;float: left;}
 .top122{ font-size:12px; color:#666666; padding:0 0 12px 0; }
-.top123{width:400px; float:left;}
+.top123{width:200px; float:left;}
 
 .top123 a{width:90px; height:27px; text-align:center; background:#478d17; line-height:27px; padding:0 10px; float:left; font-size:14px; color:#FFF; margin:0 10px 0 0; border-radius:5px 5px 5px 5px;}
 .top123 a font{font-size:12px; color:#FFF;}
@@ -73,7 +74,7 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .login2 span{float:left; margin:5px 3px 0 0;}
 .login2 a{float:left; margin:0 0 0 0;}
 .wz1{ font-size:20px; padding:10px 0; font-family:Helvetica,Arial,sans-serif;}
-.con1{ clear:both; overflow:hidden;}
+.con1{ clear:both; overflow:hidden;width:950px;margin: 0 auto;}
 .left1{ text-align:center; width:654px; overflow:hidden; float:left;}
 .left1 h2{width:150px; color:#006600; font-weight:100; display:inline; margin-bottom:10px; text-align:left; font-size:14px; float:left;}
 .left1 h2 span{width:50px; font-size:12px; color:#666;}
@@ -124,7 +125,7 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .right4{ clear:both; overflow:hidden;}
 .right41{ float:left; padding:0 0 20px 0;}
 .right42{ float:left; padding:0 0 0 12px; line-height:20px;}
-.footer{ clear:both; font:12px/1.62 Helvetica,Arial,sans-serif; line-height:20px; overflow:hidden; padding:28px 0 30px 0;}
+.footer{ clear:both; font:12px/1.62 Helvetica,Arial,sans-serif; line-height:20px; overflow:hidden; padding:28px 0 30px 0;width: 950px;margin: 0 auto;}
 .footer1{ width:50%; float:left; color:#999999;}
 .footer2{ width:50%; float:left; text-align: right;}
 .xshd .guang2{width:260px; height:250px; background:#CCC; overflow:hidden;}
@@ -159,8 +160,8 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .link3 a:hover{color:#FFF; background:#dd441b; font-size:14px; margin-right:34px;}
 .sousuo1{ float:right; padding-top:20px;}
 .inp3{ float:left; padding-left:11px; width:235px; height:28px; line-height:28px; border:1px solid #e1e9e1; border-right:0; color:#bbbbbb;}
-.inp4{ float:left; width:32px; height:28px; border:1px solid #e1e9e1; border-left:0; background:url(../../images/sousuo.jpg) no-repeat 0 0;}
-.inp4:hover{ background:url(../../images/sousuo.jpg) no-repeat 0 0;}
+.inp4{ float:left; width:32px; height:28px; border:1px solid #e1e9e1; border-left:0; background:url(../images/sousuo.jpg) no-repeat 0 0;}
+.inp4:hover{ background:url(../images/sousuo.jpg) no-repeat 0 0;}
 .top3{ height:103px; line-height:103px; font-size:25px; font-weight:bold; width:950px; margin:0 auto; overflow:hidden; color:#494949;}
 .left2{ float:left; width:690px;}
 .right5{ float:right; width:210px;}
@@ -185,13 +186,14 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .right52{ height:50px; line-height:50px; font-size:14px; color:#000;}
 .right53{ clear:both; overflow:hidden;}
 .right53 a{ float:left; margin:0 10px 10px 0;}
+.sousuo {float: right;padding-top: 30px;}
 
 /*发现小组*/
 .left4{ float:left; width:50%; height:140px; border-bottom:1px dashed #cccccc;}
 .left41{ float:left; margin-right:14px; margin-top:20px;}
 .left42{ float:left; margin-top:20px; width:245px;}
 .left43{ font-size:14px; padding-bottom:5px;}
-.left43 a{ color:3377aa;}
+.left43 a{ color:#3377aa;}
 .left44{ padding-bottom:5px; color:#111111;}
 .left45{ padding-bottom:5px; color:#666666;}
 .left46 a{ color:#ca6445;}
@@ -348,7 +350,7 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 
 .logo a:hover,.xiaozu1 a:hover{ background: none; color: #3377aa;}
 .gotop_btn {
-	background:url(../../images/back-to-top.png) no-repeat scroll 0 0 transparent;
+	background:url(../images/back-to-top.png) no-repeat scroll 0 0 transparent;
 	bottom:100px;
 	display:block;
 	height:48px;
@@ -360,7 +362,7 @@ _top:expression(eval(document.documentElement.scrollTop+document.documentElement
 	_margin-bottom:40px
 }
 .toptype a:hover{
-	background:url(../../images/back-to-top.png) no-repeat scroll 0 0 transparent;
+	background:url(../images/back-to-top.png) no-repeat scroll 0 0 transparent;
 	}
 
 .inp6{ color:#000;}
