--- a/assets/default/css/common.css
+++ b/assets/default/css/common.css
@@ -42,7 +42,7 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .head1{ height:74px;width: 950px;margin: 0 auto;}
 .logo{ float:left; margin:23px 0 0 0;}
 .nav{ float:left; padding-top:30px;}
-.nav a{ font-size:20px; font-weight:bold; margin-left:20px; float: left; width:45px; height: 24px; background: transparent url(../../images/nav.png) no-repeat 100% 100%; overflow: hidden; clear: none;}
+.nav a{ font-size:20px; margin-left:20px; float: left;  height: 24px; background: transparent url(../../images/nav.png) no-repeat 100% 100%; overflow: hidden; clear: none;}
 
 .nav a.shouye{background-position: -5px 0;}
 .nav a.xiaozu{background-position: -73px 0;}
@@ -51,7 +51,7 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .nav a.xiaozhan{background-position: -277px 0;}
 .nav a.taoke{background-position: -343px 0;}
 
-.nav a:hover{ font-size:20px; font-weight:bold; margin-left:20px;}
+.nav a:hover{ font-size:20px;  margin-left:20px;color:rgb(53, 136, 27);}
 .top{ height:134px; clear:both; overflow:hidden; height:134px;background: none repeat scroll 0 0 #F3F3F3;padding: 20px 0;}
 .topInner{width: 950px;margin: 0 auto;}
 .top1{ float:left; width:580px; height:100%;margin-top: 50px;}
