--- a/assets/default/css/common.css
+++ b/assets/default/css/common.css
@@ -79,18 +79,19 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .left1 h2{width:150px; color:#006600; font-weight:100; display:inline; margin-bottom:10px; text-align:left; font-size:14px; float:left;}
 .left1 h2 span{width:50px; font-size:12px; color:#666;}
 .left1 h2 span a:hover{background:#096; color:#fff;}
-.left1 .xiaozu{width:654px; float:left; text-align: left;}
+.left1 .xiaozu{width:654px; float:left; text-align: left;color: #c7c7c7}
 .left1 .xiaozu dl,.left1 .xiaozu .xiaozu_dl{width:320px; min-height: 66px; padding-bottom:20px; border-right:3px #fff solid; padding-top:15px; float:left;}
-.left1 .xiaozu img{width:100px; height:90px; float:left; overflow:hidden;}
-.left1 .xiaozu .xiaozu_dl .xiaozu_dl_first{height: 90px;}
+.left1 .xiaozu img{width:100px; height:80px; float:left; overflow:hidden;}
+.left1 .xiaozu .xiaozu_dl .xiaozu_dl_first{height: 80px;}
+.left1 .xiaozu .xiaozu_dl .xiaozu_dl_list li{margin: 5px 0 0 13px;list-style-type: square;}
 .left1 .xiaozu dl dt,
-.left1 .xiaozu .xiaozu_dl .xiaozu_dt{width:210px; font-size:12px; text-align:left; margin-left:10px; display:inline; color:#3377aa; float:left;}
+.left1 .xiaozu .xiaozu_dl .xiaozu_dt{width:210px; font-size:15px;font-weight: bold; text-align:left; margin:0 0 5px 10px; display:inline; color:#3377aa; float:left;}
 .left1 .xiaozu dl dt font,
 .left1 .xiaozu .xiaozu_dl .xiaozu_dt font{color:orange; font-size:12px;}
 .left1 .xiaozu dl dt a:hover,
 .left1 .xiaozu .xiaozu_dl .xiaozu_dt a:hover{ background:#3377aa; color:#fff;}
 .left1 .xiaozu dl dd,
-.left1 .xiaozu .xiaozu_dl .xiaozu_dd{width:210px; font-size:12px; line-height:24px; margin-left:10px; display:inline; color:#666; float:left;}
+.left1 .xiaozu .xiaozu_dl .xiaozu_dd{width:200px; font-size:12px; line-height:24px; margin-left:10px; display:inline; color:#666; float:left;}
 .left1 .gaungg{width:640px; height:280px; overflow:hidden; float:left; margin:0px 0 18px 0; display:inline; position: relative;}
 .left1 .huat{width:654px; margin-top:10px; display:inline; float:left;}
 .left1 .huat dl{ width:654px; float:left; padding-bottom:20px;}
