--- a/assets/default/css/common.css
+++ b/assets/default/css/common.css
@@ -52,7 +52,7 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .nav a.taoke{background-position: -343px 0;}
 
 .nav a:hover{ font-size:17px;  margin-left:20px;color:rgb(53, 136, 27);}
-.top{ height:134px; clear:both; overflow:hidden; height:134px;background-image: linear-gradient(30deg, #dce6d2, #003333 );padding: 30px 0;}
+.top{ height:134px; clear:both; overflow:hidden; height:134px;background-color:#dce6d2;background-image: linear-gradient(30deg, #dce6d2, #003333 );padding: 30px 0;}
 .topInner{width: 950px;margin: 0 auto;}
 .top1{ float:left; width:580px; height:100%;}
 .top2{ float:right; width:260px; height:100%;
@@ -107,7 +107,7 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .left1 h2 span a:hover{background:#096; color:#fff;}
 .left1 .xiaozu{width:654px; float:left; text-align: left;color: #c7c7c7}
 .left1 .xiaozu dl,.left1 .xiaozu .xiaozu_dl{width:320px; min-height: 66px; padding-bottom:20px; border-right:3px #fff solid; padding-top:15px; float:left;}
-.left1 .xiaozu img{width:100px; height:80px; float:left; overflow:hidden;}
+.left1 .xiaozu img{width:90px; height:80px; float:left; overflow:hidden;border: 1px solid #e2e2e2;border-radius: 5px;}
 .left1 .xiaozu .xiaozu_dl .xiaozu_dl_first{height: 80px;}
 .left1 .xiaozu .xiaozu_dl .xiaozu_dl_list li{margin: 5px 0 0 13px;list-style-type: square;}
 .left1 .xiaozu dl dt,
@@ -142,11 +142,12 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .right1 .yonghu ul{ float:left;}
 .right1 .yonghu ul li{width:65px; float:left;}
 .right1 .yonghu ul li ol{ height:50px; line-height:16px; position:relative; text-align:center;}
-.right1 .yonghu ul li ol a{width:49px; height:49px; border:1px #FFF solid; float:left; margin-left:10px; display:inline;}
-.right1 .yonghu ul li ol a:hover{width:49px; height:49px; border:1px #3377aa solid; float:left; margin-left:10px; display:inline;}
+.right1 .yonghu ul li ol a{width:49px; height:49px; border:1px #FFF solid; float:left;  display:inline;}
+.right1 .yonghu ul li ol a:hover{text-decoration:none; color:#fff; background: #fff;  }
 .right1 .yonghu ul li ol .zx{ position:absolute; width:0; line-height:0; right:5px; top:1px; border-bottom:15px dashed transparent; border-left:15px dashed transparent; border-top:15px solid #87C636 !important;}
-.right1 .yonghu ul li img{width:49px; height:49px; overflow:hidden;}
-.right1 .yonghu ul li p{width:65px; height:20px; text-align:center; font-size:12px; color:#3377aa; float:left; margin-bottom:10px; display:inline; padding-top:5px; overflow:hidden;}
+.right1 .yonghu ul li img{width:49px; height:49px; overflow:hidden;border: 1px solid #cccccc;border-radius: 5px;}
+.right1 .yonghu ul li img:hover{border:1px solid rgba(92, 128, 156, 0.95); }
+.right1 .yonghu ul li p{width:55px; height:20px; text-align:center; font-size:12px; color:#3377aa; float:left; margin-bottom:10px; display:inline; padding-top:5px; overflow:hidden;}
 .inp2{ width:200px; height:24px; border:1px solid #c3c3c3; float:left;}
 .a1{ height:24px; width:47px; float:left; border:1px solid #c3c3c3; text-align:center; line-height:24px; margin:0 0 0 5px; color:#000;}
 .xshd{ clear:both; color:#007722; font:15px/150% Arial,Helvetica,sans-serif; padding:10px 0 10px 0; overflow: hidden;}
@@ -160,6 +161,7 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .footer{ clear:both; font:12px/1.62 Helvetica,Arial,sans-serif; line-height:20px; overflow:hidden; padding:28px 0 30px 0;width: 950px;margin: 0 auto;}
 .footer1{ width:50%; float:left; color:#999999;}
 .footer2{ width:50%; float:left; text-align: right;}
+.footer2 a{ margin-left: 20px;}
 .xshd .guang2{width:260px; height:250px; background:#CCC; overflow:hidden;}
 
 /*我的小组话题*/
@@ -376,7 +378,7 @@ a:hover{ text-decoration:none; color:#fff; background: #3377aa; }
 .ad1{ display: none;}
 
 .mynav{ overflow:hidden; padding-top:3px; background:#fff6ee; width:950px; margin:0px auto 25px auto; border-bottom:1px solid #faeee4;}
-.mynav a{ float:left; padding:0 20px; line-height25px; margin-left:20px; margin-top:3px;}
+.mynav a{ float:left; padding:0 20px; line-height:25px; margin-left:20px; margin-top:3px;}
 .mynav a:hover{ background:#fff; color:#3377AA;}
 .bai{ background:#fff;}
 
