--- a/assets/default/css/pager.css
+++ b/assets/default/css/pager.css
@@ -9,37 +9,37 @@
  */
 #pager
 {
-	height:50px;
-	text-align:center;
-	padding:20px;
+    height:50px;
+    text-align:center;
+    padding:20px;
 }
 ul.yiiPager
 {
-	font-size:11px;
-	border:0;
-	margin:0;
-	padding:0;
-	line-height:100%;
-	display:inline;
+    font-size:11px;
+    border:0;
+    margin:0;
+    padding:0;
+    line-height:100%;
+    display:inline;
 }
 
 ul.yiiPager li
 {
-	display:inline;
+    display:inline;
 }
 
 ul.yiiPager a:link,
 ul.yiiPager a:visited
 {
-	<!--font-weight:bold;-->
-	color:#0e509e;
-	padding:1px 6px;
-	text-decoration:none;
+    /*font-weight:bold;*/
+    color:#0e509e;
+    padding:1px 6px;
+    text-decoration:none;
 }
 
 ul.yiiPager .page a
 {
-	font-weight:normal;
+    font-weight:normal;
 }
 
 ul.yiiPager a:hover
@@ -48,15 +48,15 @@ ul.yiiPager a:hover
 
 ul.yiiPager .pro_selected a
 {
-	background:#2e6ab1;
-	color:#FFFFFF;
-	<!--font-weight:bold;-->
+    background:#2e6ab1;
+    color:#FFFFFF;
+    /*font-weight:bold;*/
 }
 
 ul.yiiPager .hidden a
 {
-	border:solid 1px #DEDEDE;
-	color:#888888;
+    border:solid 1px #DEDEDE;
+    color:#888888;
 }
 
 /**
@@ -65,5 +65,5 @@ ul.yiiPager .hidden a
 ul.yiiPager .first,
 ul.yiiPager .last
 {
-	display:none;
+    display:none;
 }
